fix: allow vertical scrolling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,6 @@
 
 @layer base {
   body {
-    @apply bg-black text-slate-100 min-h-screen overflow-hidden font-lato;
+    @apply bg-black text-slate-100 min-h-screen overflow-x-hidden font-lato;
   }
 }
